<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        app:cardCornerRadius="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:textColor="@color/wine"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/congratulations_title"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:text="@string/txt_congratulations"/>

                <View
                    android:id="@+id/alert_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/msg"
                    android:background="@color/white"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/alert_view"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="6dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_bye"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/wine"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/txt_bye"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="-50dp"
                        android:layout_marginEnd="50dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_go_results"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/wine"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/txt_go_results"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="-50dp"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
