<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeActivity">
    
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="100dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent">

       <View
           android:id="@+id/container_welcome"
           android:layout_width="match_parent"
           android:layout_height="70dp"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="16dp"
           android:background="@drawable/container_rounder"
           android:padding="8dp" />

       <ImageView
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:src="@drawable/logo_cogniquiz_therapy_circular"
           android:layout_marginVertical="25dp"
           android:layout_marginStart="30dp"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/welcome"
           android:textSize="24sp"
           android:textStyle="bold"
           android:textColor="@color/wine"
           android:textAlignment="center"
           android:layout_marginHorizontal="100dp"
           android:layout_marginTop="25dp"
           android:paddingVertical="8dp"
           />
       
   </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/container_rounder"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_intro_app"
            android:padding="24dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/wine" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_bias="0.9"
        android:background="@drawable/container_button"
        android:text="@string/start" />

</androidx.constraintlayout.widget.ConstraintLayout>